styles.css
/* ... */
@keyframes bottom-hide {
  0% {
    transform: translateY(calc(0%));
    opacity: 1;
  }
  100% {
    transform: translateY(calc(100% + 2rem));
    opacity: 0;
  }
}

/* make a bouncing animation */

@keyframes logoBounce {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-5px);
  }
  100% {
    transform: translateY(0);
  }
}

/* ==================== Header ==================== */
header {
  z-index: 1;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: sticky;
  height: 150px;
  width: 100%;
  padding: 0 50px;
  /* background-color: #333; */
  background-size: cover;
  color: white;
  /* border-bottom: 50px solid #FF00BB; */
}

header::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: black;
  transform-origin: bottom;
  animation: rollAway 0.5s ease-out forwards;
}

@keyframes rollAway {
  0% {
    transform: scaleY(1);
  }
  100% {
    transform: scaleY(0);
  }
}

/* ==================== Hamburger Icon ==================== */
header #hamburger-icon {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  width: 70px;
  scale: 0.9;
  transition: scale 0.3s ease-in;
  overflow: hidden;
  padding: 10px;
  transition: all 0.3s ease;
}

header #hamburger-icon:hover {
  scale: 1;
}

header #hamburger-icon:hover > div {
  cursor: pointer;
  background-color: #ff00bb;
}

header #hamburger-icon div {
  margin-bottom: 7px;
  height: 7px;
  width: 100%;
  border-radius: 5px;
  background-color: white;
  transition: all 0.3s ease;
}

header #hamburger-icon div:last-child {
  margin-bottom: 0;
}

/* open animation */
header #hamburger-icon.open {
  transform: translateX(20%);
}

header #hamburger-icon.open div:first-child {
  transform: rotate(45deg) translate(0, 20.5px);
}

header #hamburger-icon.open div:nth-child(2) {
  opacity: 0;
}

header #hamburger-icon.open div:last-child {
  transform: rotate(-45deg) translate(0, -20.5px);
}

/* ==================== LOGO ==================== */

#logo {
  flex-grow: 1;
  display: flex;
  justify-content: center;
  font-family: "Audiowide", cursive;
  font-size: 5rem;
  font-weight: 400;
  color: white;
  text-shadow: 2px 2px 4px #000000;
  transition: transform 0.3s ease;
  cursor: pointer;
}

#logo:hover {
  animation: logoBounce 2s ease-in-out infinite;
}

/* ==================== Info ==================== */
#hamburger-icon,
#info {
  flex-grow: 0;
  display: flex;
  justify-content: center;
}

#hamburger-icon-container,
#info {
  min-width: 200px;
}

header #info {
  font-size: 1.25rem;
  font-weight: 500;
  font-family: "Space Grotesk", sans-serif;
  text-align: right;
}

/* ==================== Navigation ==================== */
nav {
  display: flex;
  justify-content: center;
  top: 150px;
  left: 0;
  right: 0;
  z-index: 1;
  position: absolute;
  background-color: #ff00bb;
  width: 100%;
  height: 0;
  visibility: hidden;
  text-transform: uppercase;
}

nav ul {
  display: flex;
  flex-direction: column;
  align-items: center;
  list-style: none;
  width: 100%;
}

nav ul li {
  cursor: pointer;
  width: 100%;
  height: 6rem;
  text-align: center;
  line-height: 6rem;
  transition: background-color 0.5s ease;
  overflow: hidden;
}
nav ul li:hover {
  background-color: white;
}

nav ul li a {
  color: white;
  font-weight: 400;
  text-decoration: none;
  transition: color 0.5s ease;
  display: block;
  width: 100vw;
}
nav ul li:hover a {
  color: black;
}

/* nav Animation */

/* close */
@keyframes shrink {
  0% {
    height: calc(6rem * 4);
    font-size: 2rem;
  }
  50% {
    height: 0px;
    font-size: 0;
  }
  100% {
    height: 0px;
    font-size: 0;
    visibility: hidden;
  }
}

.nav-shrink {
  animation-name: shrink;
  animation-duration: 0.5s;
  animation-fill-mode: forwards;
  /* animation-iteration-count: 1; */
  animation-timing-function: ease-in-out;
}

/* open */
@keyframes grow {
  0% {
    height: 0px;
    font-size: 0px;
  }
  50% {
    height: calc(6rem * 4);
    font-size: 0rem;
  }
  100% {
    height: calc(6rem * 4);
    font-size: 2rem;
    visibility: visible;
  }
}

.nav-grow {
  animation-name: grow;
  animation-duration: 0.5s;
  animation-fill-mode: forwards;
  /* animation-iteration-count: 1; */
  animation-timing-function: ease-in-out;
}

/* ==================== Home Section ==================== */
#home {
  height: calc(100vh - 150px);
}

#home-video {
  position: absolute;
  top: calc(150px);
  margin: 2rem;
  /* width: calc(100% - 4rem)!important; */
  height: calc(
    100vh - 150px - 4rem
  ) !important; /* 100% - 150px for the header and 1rem */
  border-radius: 2rem !important;
  animation: forwards 1s appear;
}

/* #home-video::-webkit-media-controls {
  display: none !important;
}

#home-video::-moz-media-controls {
  display: none !important;
}

#home-video::-ms-media-controls {
  display: none !important;
}

#home-video:hover::-webkit-media-controls {
  display: block !important;
}

#home-video:hover::-moz-media-controls {
  display: block !important;
}

#home-video:hover::-ms-media-controls {
  display: block !important;
} */

/* ==================== Contact Section ==================== */
#contact {
  flex-direction: column;
  height: auto;
  padding: 2rem;
  font-size: 2.5rem;
  text-align: center;
  color: #ff00bb;
  overflow: hidden;
}

#contact-content h2 {
  margin: 2rem;
}

/* #contact-content {
  transform: translateY(100px);
  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
} */

#contact-content.reveal {
  opacity: 1;
  transform: translateY(0);
}

#contact-content button {
  cursor: pointer;
  margin: 1rem;
  padding: 1rem;
  border-radius: 1rem;
  border: 1px solid #ff00bb;
  background-color: #ff00bb;
  font-size: 2rem;
  font-weight: 600;
  scale: 0.9;
  transition: transform 1s ease-out, scale 0.3s ease-in, color 0.3s ease-in;
}
/* ... */

